--- a/client/src/components/Checkbox.css
+++ b/client/src/components/Checkbox.css
@@ -2,6 +2,6 @@
   /* display: flex;
   justify-content: right; */
   margin-top: 20em;
-  /* position: relative; */
+  position: relative;
   margin-left: 90%;
 } 
