alignment makes sense now in terms of search/checkboxes

--- a/client/src/components/Checkbox.css
+++ b/client/src/components/Checkbox.css
@@ -1,7 +1,7 @@
 .form-check {
   /* display: flex;
   justify-content: right; */
-  margin-top: 20em;
+  /* margin-top: 20em; */
   position: relative;
   margin-left: 90%;
 } 
