--- a/client/src/components/SearchBar.css
+++ b/client/src/components/SearchBar.css
@@ -1,8 +1,8 @@
-.searchBar {
+/* .searchBar {
   text-align: center;
   margin-top: 5em;
   position: relative;
   margin-left: auto;
   margin-right: auto;
   width: 50%;
-}
+} */
