messing around with barCrawl button

--- a/client/src/components/SearchBar.css
+++ b/client/src/components/SearchBar.css
@@ -6,3 +6,9 @@
   margin-right: auto;
   width: 50%;
 }
+
+@media all and (max-device-width: 480px) {
+  .searchBar {
+    margin-bottom: 2EM
+  }
+}
