--- a/client/src/components/SearchBar.css
+++ b/client/src/components/SearchBar.css
@@ -1,8 +1,14 @@
 .searchBar {
   text-align: center;
-  margin-top: 5em;
-  position: relative;
+  margin-top: 6.5em;
+  position: absolute;
   margin-left: auto;
   margin-right: auto;
   width: 50%;
+}
+
+@media all and (max-device-width: 480px) {
+  .searchBar {
+    margin-bottom: 2EM
+  }
 }
