--- a/client/src/components/Login.css
+++ b/client/src/components/Login.css
@@ -3,9 +3,49 @@
 
 .container {
   margin-top: 80px;
-  display: grid;
-  margin-right: 200px;
+  /* display: fl; */
+
+
 }
+
+.form-group {
+  margin: 1em;
+  max-width: 300px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.form-element {
+  margin: 1em;
+}
+
+.submit-button {
+  margin-right: auto;
+  margin-left: auto;
+  display: flex;
+  background-color:#f2b705;
+  color: rgb(0, 0, 0);
+  border-radius: 4px;
+  border: none;
+  font-size: 1rem;
+  font-family: 'Fira Sans', sans-serif;
+  /* font-weight: 400; */
+  line-height: 1.5;
+  letter-spacing: 0.00938em;
+  padding: 0.5em;
+  text-transform: uppercase;
+    font-weight: 500;
+}
+
+.submit-button:hover {
+  background-color: #d89e00;
+}
+
+.sign-in{
+  margin-right: auto;
+  margin-left: auto;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -27,18 +67,19 @@ body, html, .App, #root, .auth-wrapper {
   height: 60%;
 }
 
-.navbar-light {
+/* .navbar-light {
   background-color: white;
-  /* box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2); */
-}
+  box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
+} */
 
+/*
 .auth-wrapper {
   margin-left: 80px;
   /* display: flex; */
   /* justify-content: center; */
-  flex-direction: column;
+  /* flex-direction: column;
   text-align: left;
-}
+} */
 
 .auth-inner {
   width: 450px;
@@ -70,7 +111,7 @@ body, html, .App, #root, .auth-wrapper {
   text-align: right;
   font-size: 13px;
   padding-top: 10px;
-  color: white;
+  color: rgb(0, 0, 0);
   margin: 0;
 }
 
